--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
 		</div>
 	</div>
 	<div class="container-fluid">
+		<p class="notice"><%= notice %></p>
+		<p class="alert"><%= alert %></p>
+		
 		<%= yield %>
 	</div>
 	<footer>
