--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@experiment) do |f| %>
+<%= simple_form_for(@experiment, html: {class: "form-vertical"}) do |f| %>
   <% if @experiment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@experiment.errors.count, "error") %> prohibited this experiment from being saved:</h2>
@@ -11,35 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :userid %><br />
-    <%= f.text_field :userid %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_area :title %>
-  </div>
-  <div class="field">
-    <%= f.label :startdate %><br />
-    <%= f.date_select :startdate %>
-  </div>
-  <div class="field">
-    <%= f.label :stopdate %><br />
-    <%= f.date_select :stopdate %>
-  </div>
-  <div class="field">
-    <%= f.label :experimenttype %><br />
-    <%= f.text_field :experimenttype %>
-  </div>
-  <div class="field">
-    <%= f.label :details %><br />
-    <%= f.text_area :details %>
-  </div>
-  <div class="field">
-    <%= f.label :createddate %><br />
-    <%= f.datetime_select :createddate %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="container-fluid">
+    <%= f.input :user_id, collection: User.all, label_method: :full_name %>
+    <div class="row-fluid">
+      <div class="span12 page-header">
+        <%= f.input :title, placeholder: 'Title', as: :string, label: false %>
+      </div>
+    </div>
+    <div class="row-fluid">
+        <%= f.input :startdate, wrapper_html: { class: 'span4 text-center'}, label: 'Start Date' %>
+        <%= f.input :stopdate, wrapper_html: { class: 'span4 text-center'}, label: 'Stop Date' %>
+        <%= f.input :experimenttype, wrapper_html: { class: 'span4 text-center'}, collection: 5..7, label: 'Experiment Type' %>
+    </div>
+    <div class="row-fluid">
+      <div class="span12">
+        <%= f.input :details, wrapper_html: {class: 'text-center'}, required: false %>
+      </div>
+    </div>
+    <%= f.input :createddate %>
+    <%= f.button :submit %>
   </div>
 <% end %>
