--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Userid:</b>
-  <%= @experiment.userid %>
+  <b>Creator:</b>
+  <%= @experiment.user.full_name %>
 </p>
 
 <p>
