--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,15 @@
 			<div class="container-fluid">
 				<a class="brand" href="#">MyFirstApp</a>
 				<ul class="nav pull-right">
-					<li><%= link_to 'New Experiment', new_experiment_path %></li>
-					<li><%= link_to 'Experiments', experiments_path %></li>
+					<% if user_signed_in? %>
+						<li><%= link_to 'New Experiment', new_experiment_path %></li>
+						<li><%= link_to 'Experiments', experiments_path %></li>
+						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+						<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+					<% else %>
+						<li><%= link_to "Register", new_user_registration_path %></li>
+						<li><%= link_to "Sign In", new_user_session_path %></li>
+					<% end %>
 				</ul>
 			</div>
 		</div>
