--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -19,16 +19,18 @@
       </div>
     </div>
     <div class="row-fluid">
-        <%= f.input :startdate, wrapper_html: { class: 'span4 text-center'}, label: 'Start Date' %>
-        <%= f.input :stopdate, wrapper_html: { class: 'span4 text-center'}, label: 'Stop Date' %>
-        <%= f.input :experimenttype, wrapper_html: { class: 'span4 text-center'}, collection: 5..7, label: 'Experiment Type' %>
+        <%= f.input :startdate, as: :string, :input_html => { data: {behaviour: "datepicker"}}, wrapper_html: { class: 'span4 text-center'}, label: 'Start Date' %>
+        <%= f.input :stopdate, as: :string, :input_html => { data: {behaviour: "datepicker"}}, wrapper_html: { class: 'span4 text-center'}, label: 'Stop Date' %>
+        <%= f.input :experimenttype, wrapper_html: { class: 'span4 text-center'}, input_html: { class: 'text-center' }, label: 'Experiment Type' %>
     </div>
     <div class="row-fluid">
       <div class="span12">
-        <%= f.input :details, wrapper_html: {class: 'text-center'}, required: false %>
+        <%= f.input :details, wrapper_html: {class: 'text-center'}, input_html: { class: 'text-center' }, required: false %>
       </div>
     </div>
-    <%= f.input :createddate %>
     <%= f.button :submit %>
+    <script type="text/javascript">
+      $('[data-behaviour~=datepicker]').datepicker({"format": "yyyy-mm-dd", "weekStart": 1, "autoclose": true});
+    </script>
   </div>
 <% end %>
