--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -31,6 +31,9 @@
 </p>
 
 <p>
+  <b>Created Date:</b>
+  <%= @experiment.createddate %>
+</p>
 
 
 <%= link_to 'Edit', edit_experiment_path(@experiment) %> |
