--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,18 @@
-<h2>Forgot your password?</h2>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span4">
+			<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }, html: {class: "well"}) do |f| %>
+			  <%= devise_error_messages! %>
+			  <fieldset>
+		            <legend>Forgot Your Password?</legend>
+		            <%= f.input :email %>
+		            <%= f.button :submit, "Send me reset password instructions" %>
+		        </fieldset>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+			  
+			<% end %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
+</div>
