updated navigation bar and minor tweak to experiment form

--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="span12 page-header">
-        <h1>My Experiments<span class="pull-right"><%= button_to 'Create a New Experiment (Might be filter options later for experiments)', new_experiment_path, :method => "get", :class => "btn btn-info" %></span></h1>
+        <h1>My Experiments</h1>
     </div>
 </div>
 <div id="details-section" >
