--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,14 @@
 					<% if user_signed_in? %>
 						<li><%= link_to 'New Experiment', new_experiment_path %></li>
 						<li><%= link_to 'Experiments', experiments_path %></li>
-						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-						<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+						<li class="dropdown"><%= link_to current_user.full_name, "#", class: "dropdown-toggle", :data => {:toggle => "dropdown"} %>
+							<ul class="dropdown-menu">
+								<li><%= link_to 'Edit My Profile', edit_user_registration_path %></li>
+								<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+							</ul>
+						</li>
 					<% else %>
-						<li><%= link_to "Register", new_user_registration_path %></li>
+						<li><%= link_to "Sign Up", new_user_registration_path %></li>
 						<li><%= link_to "Sign In", new_user_session_path %></li>
 					<% end %>
 				</ul>
@@ -39,6 +43,5 @@
 			<p>Built by <a href="https://twitter.com/coreykime">@CoreyKime</a></p>
 		</div>
 	</footer>
-
 </body>
 </html>
