--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="span12 page-header">
-        <h1><%= image_tag current_user.gravatar_url, style: "width: 50px; height: 50px" %> My Experiments</h1>
+        <h1>My Experiments</h1>
     </div>
 </div>
 <div id="details-section" >
