added fields to the ad copies table and also fixed to allow ad copies to be created from experiments

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -32,4 +32,5 @@
     <p class="text-center"><%= @experiment.details %></p>
   </div>
 </div>
+<%= link_to 'New Ppc ad copy', new_experiment_ppc_ad_copy_path(@experiment) %>
 
