updated some paths for new url routing

--- a/app/views/ppc_ad_copies/edit.html.erb
+++ b/app/views/ppc_ad_copies/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ppc_ad_copy %> |
-<%= link_to 'Back', ppc_ad_copies_path %>
+<%= link_to 'Back', experiment_ppc_ad_copies_path %>
