--- a/app/views/ppc_ad_copies/show.html.erb
+++ b/app/views/ppc_ad_copies/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_ppc_ad_copy_path(@ppc_ad_copy) %> |
-<%= link_to 'Back', ppc_ad_copies_path %>
+<%= link_to 'Edit', edit_experiment_ppc_ad_copy_path(@ppc_ad_copy) %> |
+<%= link_to 'Back', experiment_ppc_ad_copies_path %>
