--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <div class="row-fluid">
   <div class="span12 page-header">
@@ -32,4 +31,15 @@
     <p class="text-center"><%= @experiment.details %></p>
   </div>
 </div>
-<%= link_to 'New Ppc ad copy', new_experiment_ppc_ad_copy_path(@experiment) %>
+<div class="well">
+  <div class="row-fluid">
+    <div class="span12">
+      <p class="text-center"><%= link_to 'View Ad Copies', experiment_ppc_ad_copies_path(@experiment) %></p>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="text-center"><%= button_to 'New Ad Copy', new_experiment_ppc_ad_copy_path(@experiment), :method => "get", class: "btn btn-success" %></div>
+    </div>
+  </div>
+</div>
