--- a/app/views/ppc_ad_copies/index.html.erb
+++ b/app/views/ppc_ad_copies/index.html.erb
@@ -6,10 +6,10 @@
     <div class="row-fluid">
       <div class="span3">
         <h4 class="text-center">Ad Copy</h4>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p><%= ppc_ad_copy.title %></p>
+        <p><%= ppc_ad_copy.line_1 %></p>
+        <p><%= ppc_ad_copy.line_2 %></p>
+        <p><%= link_to ppc_ad_copy.display_url, ppc_ad_copy.landing_page_url %></p>
       </div>
       <div class="span9">
         <div class="row-fluid text-center">
@@ -27,31 +27,37 @@
           </div>
           <div class="span3">
             <h4>Cost Per Click</h4>
-            <p><%= ppc_ad_copy.CPC %></p>
+            <p><%= number_to_currency(ppc_ad_copy.CPC) %></p>
           </div>
         </div>
         <div class="row-fluid text-center">
           <div class="span3">
             <h4>Click %</h4>
-            <p></p>
+            <p><%= number_to_percentage(number_with_precision(ppc_ad_copy.click_percentage), precision: 2) %></p>
           </div>
           <div class="span3">
             <h4>Conversion %</h4>
-            <p></p>
+            <p><%= number_to_percentage(number_with_precision(ppc_ad_copy.conversion_percentage), precision: 2) %></p>
           </div>
           <div class="span3">
             <h4>Total Cost</h4>
-            <p></p>
+            <p><%= number_to_currency(ppc_ad_copy.total_cost) %></p>
           </div>
           <div class="span3">
             <h4>Cost Per Conversion</h4>
-            <p></p>
+            <p><%= number_to_currency(ppc_ad_copy.cost_per_conversion) %></p>
           </div>
         </div>
       </div>
     </div>
-    <%= link_to 'Edit', edit_experiment_ppc_ad_copy_path(@experiment, ppc_ad_copy) %>
-    <%= link_to 'Destroy', [@experiment, ppc_ad_copy], method: :delete, data: { confirm: 'Are you sure?' } %>
+    <div class="row-fluid">
+      <div class="span12">
+        <div class="text-center">
+          <%= button_to 'Edit', edit_experiment_ppc_ad_copy_path(@experiment, ppc_ad_copy), :method => "get", class: "btn btn-primary" %>
+          <%= button_to 'Destroy', [@experiment, ppc_ad_copy], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <% end %>
