--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row-fluid">
   <div class="span12 page-header">
     <h1 style="display: inline;"><%= @experiment.title %></h1>
-    <span class="pull-right"><%= button_to 'Edit', edit_experiment_path(@experiment), :method => "get", class: "btn btn-primary" %></span>
+    <span class="pull-right"><%= button_to 'Edit Experiment', edit_experiment_path(@experiment), :method => "get", class: "btn btn-primary" %></span>
   </div>
 </div>
 <div class="row-fluid">
