--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -22,9 +22,7 @@
       <%= f.input :experimenttype, wrapper_html: { class: 'span4 text-center'}, input_html: { class: 'text-center' }, label: 'Experiment Type' %>
   </div>
   <div class="row-fluid">
-    <div class="span12">
-      <%= f.input :details, wrapper_html: {class: 'text-center'}, input_html: { class: 'text-center' }, required: false %>
-    </div>
+      <%= f.input :details, wrapper_html: {class: 'text-center'}, input_html: { class: 'field span12 text-center', :rows => 5 }, required: false %>
   </div>
   <%= f.button :submit %>
   <script type="text/javascript">
