--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@experiment, html: {class: "form-vertical"}) do |f| %>
+<%= simple_form_for(@experiment) do |f| %>
   <% if @experiment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@experiment.errors.count, "error") %> prohibited this experiment from being saved:</h2>
@@ -11,20 +11,20 @@
     </div>
   <% end %>
 
-  <div class="row-fluid">
-    <div class="span12 page-header">
-      <%= f.input :title, placeholder: 'Title', as: :string, label: false %>
+  <div class="row">
+    <div class="col-md-12 page-header form-group">
+      <%= f.input :title, placeholder: 'Title', as: :string, label: false, input_html: { class: 'form-control' } %>
     </div>
   </div>
-  <div class="row-fluid">
-      <%= f.input :startdate, as: :string, :input_html => { data: {behaviour: "datepicker"}}, wrapper_html: { class: 'span4 text-center'}, label: 'Start Date' %>
-      <%= f.input :stopdate, as: :string, :input_html => { data: {behaviour: "datepicker"}}, wrapper_html: { class: 'span4 text-center'}, label: 'Stop Date' %>
-      <%= f.input :experimenttype, wrapper_html: { class: 'span4 text-center'}, input_html: { class: 'text-center' }, label: 'Experiment Type' %>
+  <div class="row">
+      <%= f.input :startdate, as: :string, :input_html => { data: {behaviour: "datepicker"}, class: 'form-control'}, wrapper_html: { class: 'col-md-4 text-center form-group'}, label: 'Start Date' %>
+      <%= f.input :stopdate, as: :string, :input_html => { data: {behaviour: "datepicker"}, class: 'form-control'}, wrapper_html: { class: 'col-md-4 text-center form-group'}, label: 'Stop Date' %>
+      <%= f.input :experimenttype, wrapper_html: { class: 'col-md-4 text-center form-group'}, input_html: { class: 'text-center form-control' }, label: 'Experiment Type' %>
   </div>
-  <div class="row-fluid">
-      <%= f.input :details, wrapper_html: {class: 'text-center'}, input_html: { class: 'field span12 text-center', :rows => 5 }, required: false %>
+  <div class="row">
+      <%= f.input :details, wrapper_html: {class: 'col-md-12 text-center form-group'}, input_html: { class: 'text-center form-control', :rows => 5 }, required: false %>
   </div>
-  <%= f.button :submit %>
+  <%= f.button :submit, :class => 'btn btn-success' %>
   <script type="text/javascript">
     $('[data-behaviour~=datepicker]').datepicker({"format": "yyyy-mm-dd", "weekStart": 1, "autoclose": true});
   </script>
