--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,44 +1,44 @@
 
-<div class="row-fluid">
-  <div class="span12 page-header">
+<div class="row">
+  <div class="col-md-12 page-header">
     <h1 style="display: inline;"><%= @experiment.title %></h1>
     <span class="pull-right"><%= button_to 'Edit Experiment', edit_experiment_path(@experiment), :method => "get", class: "btn btn-primary" %></span>
   </div>
 </div>
-<div class="row-fluid">
-  <div class="span4">
+<div class="row">
+  <div class="col-md-4">
     <h2 class="text-center">Start Date</h2>
     <div class="text-center">
       <p><%= @experiment.startdate %></p>
     </div>
   </div>
-  <div class="span4">
+  <div class="col-md-4">
     <h2 class="text-center">Stop Date</h2>
     <div class="text-center">
       <p><%= @experiment.stopdate %></p>
     </div>
   </div>
-  <div class="span4">
+  <div class="col-md-4">
     <h2 class="text-center">Experiment Type</h2>
     <div class="text-center">
       <p><%= @experiment.experimenttype %></p>
     </div>
   </div>
 </div>
-<div class="row-fluid">
-  <div class="span12">
+<div class="row">
+  <div class="col-md-12">
     <h2 class="text-center">Experiment Details</h2>
     <p class="text-center"><%= @experiment.details %></p>
   </div>
 </div>
 <div class="well">
-  <div class="row-fluid">
-    <div class="span12">
+  <div class="row">
+    <div class="col-md-12">
       <p class="text-center"><%= link_to 'View Ad Copies', experiment_ppc_ad_copies_path(@experiment) %></p>
     </div>
   </div>
-  <div class="row-fluid">
-    <div class="span12">
+  <div class="row">
+    <div class="col-md-12">
       <div class="text-center"><%= button_to 'New Ad Copy', new_experiment_ppc_ad_copy_path(@experiment), :method => "get", class: "btn btn-success" %></div>
     </div>
   </div>
