--- a/app/views/ppc_ad_copies/index.html.erb
+++ b/app/views/ppc_ad_copies/index.html.erb
@@ -1,62 +1,62 @@
-<div class="row-fluid">
-  <div class="span12 page-header">
+<div class="row">
+  <div class="col-md-12 page-header">
     <h1 style="display: inline;">Ad Copy Options</h1>
     <span class="pull-right"><%= button_to 'Back to Experiment', experiment_path(@experiment), :method => "get", class: "btn btn-primary" %></span>
   </div>
 </div>
 
 <% @ppc_ad_copies.each do |ppc_ad_copy| %>
-<div class="row-fluid">
-  <div class="span12 well">
-    <div class="row-fluid">
-      <div class="span3">
+<div class="row">
+  <div class="col-md-12 well">
+    <div class="row">
+      <div class="col-md-3">
         <h4 class="text-center">Ad Copy</h4>
         <p><%= ppc_ad_copy.title %></p>
         <p><%= ppc_ad_copy.line_1 %></p>
         <p><%= ppc_ad_copy.line_2 %></p>
         <p><%= link_to ppc_ad_copy.display_url, ppc_ad_copy.landing_page_url %></p>
       </div>
-      <div class="span9">
-        <div class="row-fluid text-center">
-          <div class="span3">
+      <div class="col-md-9">
+        <div class="row text-center">
+          <div class="col-md-3">
             <h4>Impressions</h4>
             <p><%= ppc_ad_copy.Impressions %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Clicks</h4>
             <p><%= ppc_ad_copy.Clicks %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Conversions</h4>
             <p><%= ppc_ad_copy.Conversions %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Cost Per Click</h4>
             <p><%= number_to_currency(ppc_ad_copy.CPC) %></p>
           </div>
         </div>
-        <div class="row-fluid text-center">
-          <div class="span3">
+        <div class="row text-center">
+          <div class="col-md-3">
             <h4>Click %</h4>
             <p><%= number_to_percentage(number_with_precision(ppc_ad_copy.click_percentage), precision: 2) %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Conversion %</h4>
             <p><%= number_to_percentage(number_with_precision(ppc_ad_copy.conversion_percentage), precision: 2) %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Total Cost</h4>
             <p><%= number_to_currency(ppc_ad_copy.total_cost) %></p>
           </div>
-          <div class="span3">
+          <div class="col-md-3">
             <h4>Cost Per Conversion</h4>
             <p><%= number_to_currency(ppc_ad_copy.cost_per_conversion) %></p>
           </div>
         </div>
       </div>
     </div>
-    <div class="row-fluid">
-      <div class="span12">
+    <div class="row">
+      <div class="col-md-12">
         <div class="text-center">
           <%= button_to 'Edit', edit_experiment_ppc_ad_copy_path(@experiment, ppc_ad_copy), :method => "get", class: "btn btn-primary" %>
           <%= button_to 'Destroy', [@experiment, ppc_ad_copy], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
