--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,8 +5,8 @@
 			  <%= devise_error_messages! %>
 			  <fieldset>
 		            <legend>Forgot Your Password?</legend>
-		            <%= f.input :email %>
-		            <%= f.button :submit, "Send me reset password instructions" %>
+		            <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+		            <%= f.button :submit, "Send me reset password instructions", :class => 'btn btn-default' %>
 		        </fieldset>
 
 			  
