--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="page-header">
     <h1>My Profile</h1>
   </div>
@@ -7,31 +7,31 @@
   <%= devise_error_messages! %>
     <div class="login-info">
       <h2>Login Information</h2>
-      <%= f.input :email %>
+      <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
 
-      <%= f.input :password, hint: 'leave blank if you do not want to change it' %>
+      <%= f.input :password, hint: 'leave blank if you do not want to change it', wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
 
-      <%= f.input :password_confirmation %>
+      <%= f.input :password_confirmation, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
 
-      <%= f.input :current_password, hint: 'we need your current password to confirm your changes' %>
+      <%= f.input :current_password, hint: 'we need your current password to confirm your changes', wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
     </div>
     <div class="personal-info">
       <h2>Personal Information</h2>
-      <%= f.input :first_name %>
-      <%= f.input :last_name %>
-      <%= f.input :user_name %>
+      <%= f.input :first_name, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+      <%= f.input :last_name, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+      <%= f.input :user_name, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
     </div>
 
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", :class => 'btn btn-default' %>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-danger' %></p>
 
 <%= link_to "Back", :back %>
 </div>
