--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -3,7 +3,7 @@
 <%= simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <%= f.input :email %>
+  <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
   <%= f.button :submit, "Resend unlock instructions" %>
 <% end %>
 
