--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -19,7 +19,7 @@
   <div class="row">
       <%= f.input :startdate, as: :string, :input_html => { data: {behaviour: "datepicker"}, class: 'form-control'}, wrapper_html: { class: 'col-md-4 text-center form-group'}, label: 'Start Date' %>
       <%= f.input :stopdate, as: :string, :input_html => { data: {behaviour: "datepicker"}, class: 'form-control'}, wrapper_html: { class: 'col-md-4 text-center form-group'}, label: 'Stop Date' %>
-      <%= f.input :experimenttype, wrapper_html: { class: 'col-md-4 text-center form-group'}, input_html: { class: 'text-center form-control' }, label: 'Experiment Type' %>
+      <%= f.input :experimenttype, collection: @types, wrapper_html: { class: 'col-md-4 text-center form-group'}, input_html: { class: 'text-center form-control' }, label: 'Experiment Type' %>
   </div>
   <div class="row">
       <%= f.input :details, wrapper_html: {class: 'col-md-12 text-center form-group'}, input_html: { class: 'text-center form-control', :rows => 5 }, required: false %>
