--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -31,6 +31,15 @@
     <p class="text-center"><%= @experiment.details %></p>
   </div>
 </div>
+<% if @experiment.experimenttype == "" %>
+  <div class="well">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center"><%= button_to 'Please choose an experiment type before making variations', edit_experiment_path(@experiment), :method => "get", class: "btn btn-info" %></div>
+      </div>
+    </div>
+  </div>
+<% end %>
 <% if @experiment.experimenttype == "1" %>
   <div class="well">
     <div class="row">
