--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 					<% if user_signed_in? %>
 						<li><%= link_to 'New Experiment', new_experiment_path %></li>
 						<li><%= link_to 'Experiments', experiments_path %></li>
-						<li class="dropdown"><%= link_to current_user.full_name, "#", class: "dropdown-toggle", :data => {:toggle => "dropdown"} %>
+						<li class="dropdown"><%= link_to (current_user.full_name + ' <span class="caret"></span>').html_safe, "#", class: "dropdown-toggle", :data => {:toggle => "dropdown"} %>
 							<ul class="dropdown-menu">
 								<li><%= link_to 'Edit My Profile', edit_user_registration_path %></li>
 								<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
