--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -21,7 +21,7 @@
   <div class="col-md-4">
     <h2 class="text-center">Experiment Type</h2>
     <div class="text-center">
-      <p><%= @experiment.experimenttype %></p>
+      <p><%= @experiment.type.name %></p>
     </div>
   </div>
 </div>
