--- a/app/views/ppc_ad_copies/index.html.erb
+++ b/app/views/ppc_ad_copies/index.html.erb
@@ -1,11 +1,10 @@
 <div class="row">
-  <div class="col-md-12 page-header">
-    <h1 style="display: inline;">Ad Copy Options</h1>
-    <span class="pull-right"><%= button_to 'Back to Experiment', experiment_path(@experiment), :method => "get", class: "btn btn-primary" %></span>
+  <div class="col-md-12">
+    <h1>Ad Copy Options</h1>
   </div>
 </div>
 
-<% @ppc_ad_copies.each do |ppc_ad_copy| %>
+<% @experiment.ppc_ad_copies.each do |ppc_ad_copy| %>
 <div class="row">
   <div class="col-md-12 well">
     <div class="row">
@@ -66,4 +65,8 @@
   </div>
 </div>
 <% end %>
-
+<div class="row">
+  <div class="well col-md-12">
+    <div class="text-center"><%= button_to 'New Ad Copy', new_experiment_ppc_ad_copy_path(@experiment), :method => "get", class: "btn btn-success" %></div>
+  </div>
+</div>
