--- a/app/views/ppc_ad_copies/index.html.erb
+++ b/app/views/ppc_ad_copies/index.html.erb
@@ -8,6 +8,11 @@
 <div class="row">
   <div class="col-md-12 well">
     <div class="row">
+      <div class="col-md-12">
+        <h3><%= ppc_ad_copy.option_title %></h3>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-3">
         <h4 class="text-center">Ad Copy</h4>
         <p><%= ppc_ad_copy.title %></p>
