--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for(@experiment) do |f| %>
   <% if @experiment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@experiment.errors.count, "error") %> prohibited this experiment from being saved:</h2>
-
+    <div id="error_explanation" class="alert alert-danger">
+      <h4><%= pluralize(@experiment.errors.count, "error") %> prohibited this experiment from being saved:</h4>
+      <button class="close" data-dismiss="alert">x</button>
       <ul>
       <% @experiment.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
