--- a/app/views/ppc_ad_copies/_form.html.erb
+++ b/app/views/ppc_ad_copies/_form.html.erb
@@ -2,15 +2,44 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :Impressions, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :Clicks, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :Conversions, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :CPC, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :title, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :line_1, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :line_2, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :display_url, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
-    <%= f.input :landing_page_url, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+    <div class="row">
+      <div class="col-md-12 well">
+        <div class="row">
+          <div class="col-md-12">
+            <%= f.input :option_title, placeholder: 'Option Name', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <h4 class="text-center">Ad Copy</h4>
+            <%= f.input :title, placeholder: 'Title', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+            <%= f.input :line_1, placeholder: 'Line One', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+            <%= f.input :line_2, placeholder: 'Line Two', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+            <%= f.input :display_url, placeholder: 'Display URL', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+            <%= f.input :landing_page_url, placeholder: 'Landing Page URL', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+          </div>
+          <div class="col-md-9">
+            <h4 class="text-center">Ad Statistics</h4>
+            <div class="row text-center">
+              <div class="col-md-6">
+                <%= f.input :Impressions, placeholder: 'Impressions', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+              </div>
+              <div class="col-md-6">
+                <%= f.input :Clicks, placeholder: 'Clicks', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+              </div>
+            </div>
+            <div class="row text-center">
+              <div class="col-md-6">
+                <%= f.input :Conversions, placeholder: 'Conversions', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+              </div>
+              <div class="col-md-6">
+                <%= f.input :CPC, placeholder: 'Cost Per Click', label: false, wrapper_html: { class: 'form-group' }, input_html: { class: 'form-control' } %>
+              </div>
+            </div>    
+          </div>
+        </div>      
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
