add active field to experiment index page and show page. Also fixed active field layout on form

--- a/app/views/experiments/_form.html.erb
+++ b/app/views/experiments/_form.html.erb
@@ -11,9 +11,12 @@
     </div>
   <% end %>
 
-  <div class="row">
-    <div class="col-md-12 page-header form-group">
+  <div class="row page-header">
+    <div class="col-md-10 form-group">
       <%= f.input :title, placeholder: 'Title', as: :string, label: false, input_html: { class: 'form-control' } %>
+    </div>
+    <div class="col-md-2">
+      <%= f.input :active, label: false, inline_label: 'Active', wrapper_html: {class: 'form-group'} %>
     </div>
   </div>
   <div class="row">
@@ -29,7 +32,6 @@
   <div class="row">
       <%= f.input :details, wrapper_html: {class: 'col-md-12 text-center form-group'}, input_html: { class: 'text-center form-control', :rows => 5 }, required: false %>
   </div>
-    <%= f.input :active, label: false, inline_label: 'Active', wrapper_html: {class: 'form-group checkbox'} %>
   <%= f.button :submit, :class => 'btn btn-success' %>
   <script type="text/javascript">
     $('[data-behaviour~=datepicker]').datepicker({"format": "yyyy-mm-dd", "weekStart": 1, "autoclose": true});
