--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -4,24 +4,22 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-        <div class="navbar navbar-default">
-            <div class="navbar-inner">
-                <ul class="nav row">
-                    <li class="col-md-5 col-xs-12 col-sm-12 text-center">Experiment</li>
-                    <li class="col-md-2 hidden-xs hidden-sm text-center">Type</li>
-                    <li class="col-md-3 hidden-xs hidden-sm text-center">Run Time</li>
-                    <li class="col-md-2 hidden-xs hidden-sm text-center">Options</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <p class="col-md-4 col-md-offset-1 col-xs-12 col-sm-12 text-center">Experiment</p>
+    <p class="col-md-2 hidden-xs hidden-sm text-center">Type</p>
+    <p class="col-md-3 hidden-xs hidden-sm text-center">Run Time</p>
+    <p class="col-md-2 hidden-xs hidden-sm text-center">Options</p>
 </div>                    
 <% @experiments.each do |experiment| %>
     <div class="row">
         <div class="col-md-12 well well-large">
             <div class="row">
-                <p class="col-md-5 text-center"><%= link_to experiment.title, experiment %></p>
+                <% if experiment.active == true %>
+                    <p class="col-md-1 text-center">Active</p>
+                <% end %>
+                <% if experiment.active == false %>
+                    <p class="col-md-1 text-center">Inactive</p>
+                <% end %>
+                <p class="col-md-4 text-center"><%= link_to experiment.title, experiment %></p>
                 <p class="col-md-2 hidden-xs hidden-sm text-center"><%= experiment.type.name %></p>
                 <p class="col-md-3 hidden-xs hidden-sm text-center"><%= experiment.startdate %> to <%= experiment.stopdate %></p>
                 <p class="col-md-1 text-center"><%= link_to 'Edit', edit_experiment_path(experiment) %></p>
