--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -4,7 +4,8 @@
     </div>
 </div>
 <div class="row">
-    <p class="col-md-4 col-md-offset-1 col-xs-12 col-sm-12 text-center">Experiment</p>
+    <p class="col-md-2 hidden-xs hidden-sm text-center">Status</p>
+    <p class="col-md-3 col-xs-12 col-sm-12 text-center">Experiment</p>
     <p class="col-md-2 hidden-xs hidden-sm text-center">Type</p>
     <p class="col-md-3 hidden-xs hidden-sm text-center">Run Time</p>
     <p class="col-md-2 hidden-xs hidden-sm text-center">Options</p>
@@ -13,13 +14,16 @@
     <div class="row">
         <div class="col-md-12 well well-large">
             <div class="row">
-                <% if experiment.active == true %>
-                    <p class="col-md-1 text-center">Active</p>
+                <% if experiment.status == "1" %>
+                    <p class="col-md-2 text-center">Planning</p>
                 <% end %>
-                <% if experiment.active == false %>
-                    <p class="col-md-1 text-center">Inactive</p>
+                <% if experiment.status == "2" %>
+                    <p class="col-md-2 text-center">In Progress</p>
                 <% end %>
-                <p class="col-md-4 text-center"><%= link_to experiment.title, experiment %></p>
+                <% if experiment.status == "3" %>
+                    <p class="col-md-2 text-center">Completed</p>
+                <% end %>
+                <p class="col-md-3 text-center"><%= link_to experiment.title, experiment %></p>
                 <p class="col-md-2 hidden-xs hidden-sm text-center"><%= experiment.type.name %></p>
                 <p class="col-md-3 hidden-xs hidden-sm text-center"><%= experiment.startdate %> to <%= experiment.stopdate %></p>
                 <p class="col-md-1 text-center"><%= link_to 'Edit', edit_experiment_path(experiment) %></p>
