--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,11 +1,13 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <%= f.input :email %>
-
-  <%= f.button :submit, "Resend confirmation instructions" %>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
+			<%= devise_error_messages! %>
+			<fieldset>
+				<legend>Resend confirmation instructions</legend>
+				<%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+				<%= f.button :submit, "Resend confirmation instructions", :class => 'btn btn-info' %>
+			</fieldset>
+		<% end %>
+		<%= render "devise/shared/links" %>
+	</div>
+</div>
