--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,15 @@
-<h2>Change your password</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.input :reset_password_token, as: :hidden, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
-
-  <%= f.input :password, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
-
-  <%= f.input :password_confirmation, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
-
-  <%= f.button :submit, "Change my password", :class => 'btn btn-default' %>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">		
+		<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+			<%= devise_error_messages! %>
+		  	<fieldset>
+		  		<legend>Change your password</legend>
+			  	<%= f.input :reset_password_token, as: :hidden, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+			  	<%= f.input :password, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+			  	<%= f.input :password_confirmation, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+			  	<%= f.button :submit, "Change my password", :class => 'btn btn-info' %>
+		  </fieldset>
+		<% end %>
+		<%= render "devise/shared/links" %>
+	</div>
+</div>
