--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,13 @@
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="span4">
-			<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }, html: {class: "well"}) do |f| %>
-			  <%= devise_error_messages! %>
-			  <fieldset>
-		            <legend>Forgot Your Password?</legend>
-		            <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
-		            <%= f.button :submit, "Send me reset password instructions", :class => 'btn btn-default' %>
-		        </fieldset>
-
-			  
-			<% end %>
-
-			<%= render "devise/shared/links" %>
-		</div>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }, html: {class: "well"}) do |f| %>
+		  <%= devise_error_messages! %>
+		  	<fieldset>
+	            <legend>Forgot Your Password?</legend>
+	            <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
+	            <%= f.button :submit, "Send me reset password instructions", :class => 'btn btn-info' %>
+        	</fieldset>
+		<% end %>
+		<%= render "devise/shared/links" %>
 	</div>
 </div>
