--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
           <%= f.input :email, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
           <%= f.input :password, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
           <%= f.input :password_confirmation, wrapper_html: { class: 'form-group'}, input_html: { class: 'form-control' } %>
-          <%= f.button :submit, "Sign up", :class => 'btn btn-default' %>
+          <%= f.button :submit, "Sign up", :class => 'btn btn-info' %>
         </fieldset>
     <% end %>
 
