created email scaffold and integrated it into experiments and updated styling. Also added some minor tweaks to other pieces

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -53,3 +53,6 @@
 <% if @experiment.experimenttype == "1" %>
   <%= render template: "ppc_ad_copies/index" %>
 <% end %>
+<% if @experiment.experimenttype == "3" %>
+  <%= render template: "emails/index" %>
+<% end %>
